Add div <> adding the experience section

--- a/page.html
+++ b/page.html
@@ -13,5 +13,30 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, illo commodi ducimus omnis doloremque facere! Atque Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad odio, et consequuntur aut quas accusamus quia id velit nisi tempore minima molestiae dolore aperiam rerum quaerat optio non consequatur. Corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at odio enim odit, adipisci optio ullam non ea blanditiis esse corrupti in! Odio ullam facilis asperiores accusantium reprehenderit nesciunt quia? ?</p>
     
 </div>
+
+<div class="experience">
+  <h1>PROFESSIONAL EXPERIENCE</h1>
+  <hr>
+  <h2>Junior Web Developer</h4>
+
+  <div>
+    <ul>
+      <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia possimus accusantium cumque, nobis earum nihil. Assumenda alias sunt sapiente, rerum aut pariatur voluptatem facilis natus deserunt eius rem ipsa enim?</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita consectetur omnis beatae ut, saepe vel fugit iure cumque, voluptate voluptates distinctio? Maiores, itaque nam. Voluptate, dolores! Voluptatem ipsa odio vitae.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci laudantium maiores neque modi illo delectus, enim ducimus iusto doloribus sed maxime perspiciatis! Ea nobis eos odio distinctio, qui soluta voluptatum?</li>
+    </ul>
+  </div>
+  
+  <h2>Intern Developer</h2>
+  
+  <div>
+    <ul>
+      <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia possimus accusantium cumque, nobis earum nihil. Assumenda alias sunt sapiente, rerum aut pariatur voluptatem facilis natus deserunt eius rem ipsa enim?</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita consectetur omnis beatae ut, saepe vel fugit iure cumque, voluptate voluptates distinctio? Maiores, itaque nam. Voluptate, dolores! Voluptatem ipsa odio vitae.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci laudantium maiores neque modi illo delectus, enim ducimus iusto doloribus sed maxime perspiciatis! Ea nobis eos odio distinctio, qui soluta voluptatum?</li>
+    </ul>
+  </div>
+  
+</div>
 </body>
 </html>
