Add div <> adding the education section

--- a/page.html
+++ b/page.html
@@ -28,7 +28,7 @@
   </div>
   
   <h2>Intern Developer</h2>
-  
+
   <div>
     <ul>
       <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia possimus accusantium cumque, nobis earum nihil. Assumenda alias sunt sapiente, rerum aut pariatur voluptatem facilis natus deserunt eius rem ipsa enim?</li>
@@ -37,6 +37,28 @@
     </ul>
   </div>
   
+</div>
+
+<div class="education">
+  <h1>EDUCATION</h1>
+  <hr>
+  <h2>Bachelor Of Computer Engineering</h4>
+
+    <div>
+      <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia possimus accusantium cumque, nobis earum nihil. Assumenda alias sunt sapiente, rerum aut pariatur voluptatem facilis natus deserunt eius rem ipsa enim?</li>
+      </ul>
+    </div>
+    
+    <h2>Highschool Diplome</h2>
+  
+    <div>
+      <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia possimus accusantium cumque, nobis earum nihil. Assumenda alias sunt sapiente, rerum aut pariatur voluptatem facilis natus deserunt eius rem ipsa enim?</li>
+      </ul>
+    </div>
+    
+  </div>
 </div>
 </body>
 </html>
